--- a/2_cloud_free_composite_with_dates.ipynb
+++ b/2_cloud_free_composite_with_dates.ipynb
@@ -2,10 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/tljh/user/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tenacity, Planet and Multiprocessing are required for Planet data downloading\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os,sys\n",
+    "sys.path.append(r\"../templates/\")\n",
+    "import PYEO_model\n",
+    "sys.path.append(r\"/opt/pyeo\")\n",
+    "import pyeo.core as pyeo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pyeo.composite_directory(image_dir= , \n",
+    "                         composite_out_dir =, \n",
+    "                         format = 'GTiff',\n",
+    "                         generate_date_images = True\n",
+    "                        )"
+   ]
   }
  ],
  "metadata": {
@@ -24,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
