--- a/4_comparing_ML_models.ipynb
+++ b/4_comparing_ML_models.ipynb
@@ -4,19 +4,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This code is to compare different classifiers.Compared classifiers include: random forest, extra-tress, decision tree, SVM and Neural network\n",
+    "# Introduction\n",
     "\n",
-    "Note that the default parameters for each model are used in this test. \n",
+    "This is a template to compare different machine learning classifiers, including random forest, extra-tress, decision tree, SVM and Neural network. The output of are:\n",
+    "a. different trained models with each classifier\n",
     "\n",
-    "You are suggested to explore more parameter combinitions. \n",
     "\n",
-    "More details on model fitting and paramters:\n",
+    "Note that the default parameters for each model are used in this test. You are highly suggested to explore more parameter combinitions. \n",
+    "\n",
+    "More details on model fitting and paramters can be found in the sklearn library:\n",
     "\n",
     "Random Forest:https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
     "Extra tress:https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.ExtraTreesClassifier.html\n",
     "Decision Tree:https://scikit-learn.org/stable/modules/tree.html\n",
     "SVM: https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html\n",
     "Neural network: https://scikit-learn.org/stable/modules/neural_networks_supervised.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Introduction\n",
+    "\n",
+    "This is a template to create, apply and validate a machine learning model for land use classificatin. The model is trained and valided with seperate shapefiles. The output include:\n",
+    "\n",
+    "    a statistic summary of the input training data for the model (export as .csv file).\n",
+    "    a trained machine learning model. In this example a random forest model is used (export as a .pkl file).\n",
+    "    a classified image using the trained model (export as .tif).\n",
+    "    validating the classified image, generating an accuracy matrix and export as .csv file.\n",
+    "\n",
+    "Using this template\n",
+    "\n",
+    "Set the variables in the first cell to the following:\n",
+    "\n",
+    "pyeo_path = \"The folder that you cloned pyeo into\"\n",
+    "training_tif = \"The path to the stacked image you used for your training data\"\n",
+    "training_shp = \"The path to the shapefile you made that contains a field with whole number (intergers) class identifiers\"\n",
+    "training_field_name = \"The name of the field in training_shp containing class identifiers. CODE, by default.\"\n",
+    "out_dir = \"A directory that the model and related files will be put in\"\n",
+    "validation_shp = \"The shapefile containing the valiation data.\"\n",
+    "validation_field_name = \"The name of the field in validation_shp containing class identifers. CODE by default.\"\n",
+    "\n",
+    "Now run each cell.\n"
    ]
   },
   {
