fix bugs on template 4

--- a/4_comparing_ML_models.ipynb
+++ b/4_comparing_ML_models.ipynb
@@ -25,15 +25,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introduction\n",
-    "\n",
-    "This is a template to create, apply and validate a machine learning model for land use classificatin. The model is trained and valided with seperate shapefiles. The output include:\n",
-    "\n",
-    "    a statistic summary of the input training data for the model (export as .csv file).\n",
-    "    a trained machine learning model. In this example a random forest model is used (export as a .pkl file).\n",
-    "    a classified image using the trained model (export as .tif).\n",
-    "    validating the classified image, generating an accuracy matrix and export as .csv file.\n",
-    "\n",
     "Using this template\n",
     "\n",
     "Set the variables in the first cell to the following:\n",
@@ -92,18 +83,17 @@
    "outputs": [],
    "source": [
     "#set input parameters \n",
-    "os.chdir('/home/jupyter-yaqing/')\n",
     "\n",
-    "training_tif = \"Data/Brazil/2018.tif\"\n",
-    "training_shp = \"Data/Brazil/shp/training/training.shp\"\n",
-    "training_filedname = 'Id'\n",
+    "pyeo_path = \"/home/ecci/xxx/pyeo\"\n",
+    "training_tif = \"xxx.tif\"\n",
+    "training_shp = \"xxx.shp\"\n",
+    "training_field_name = 'CODE'\n",
+    "out_dir = \"/\"\n",
     "\n",
-    "tobe_classified = training_tif\n",
+    "validation_shp = \"xxx.shp\"\n",
+    "validation_field_name = 'CODE'\n",
     "\n",
-    "validation_shp = \"Data/Brazil/shp/validation/validation.shp\"\n",
-    "validation_filedname = 'Id'\n",
-    "\n",
-    "nodata = 0"
+    "tobe_classified_tif = ' '\n"
    ]
   },
   {
@@ -113,9 +103,7 @@
    "outputs": [],
    "source": [
     "#set output folder\n",
-    "out_dir = \"Output/template4_comparing_models/\"\n",
-    "\n",
-    "out_training_summary = os.path.join(out_dir, 'training_summary.csv')"
+    "out_training_summary = os.path.join(out_dir, 'training_summary.csv')\n"
    ]
   },
   {
