fix bugs template 4

--- a/4_comparing_ML_models.ipynb
+++ b/4_comparing_ML_models.ipynb
@@ -61,20 +61,7 @@
      ]
     }
    ],
-   "source": [
-    "import os,sys\n",
-    "sys.path.append(r\"../templates/\")\n",
-    "import PYEO_model\n",
-    "sys.path.append(r\"/opt/pyeo\")\n",
-    "import pyeo.core as pyeo\n",
-    "\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn import svm\n",
-    "from sklearn.neural_network import MLPClassifier\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -94,6 +81,26 @@
     "validation_field_name = 'CODE'\n",
     "\n",
     "tobe_classified_tif = ' '\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os,sys\n",
+    "sys.path.append(r\"../templates/\")\n",
+    "import PYEO_model\n",
+    "sys.path.append(pyeo_path)\n",
+    "import pyeo.core as pyeo\n",
+    "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn import svm\n",
+    "from sklearn.neural_network import MLPClassifier\n"
    ]
   },
   {
