changing the format for templat 4

--- a/4_comparing_ML_models.ipynb
+++ b/4_comparing_ML_models.ipynb
@@ -6,19 +6,27 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "This is a template to compare different machine learning classifiers, including random forest, extra-tress, decision tree, SVM and Neural network. The output of are:\n",
-    "a. different trained models with each classifier\n",
+    "This is a template to compare different machine learning classifiers, including random forest, extra-tress, decision tree, SVM and Neural network. \n",
     "\n",
+    "## The output are:\n",
+    "\n",
+    "```python\n",
+    "a. different trained models with each classifier in the model pool\n",
+    "b. a statistic summary of the input training data for the model (export as .csv file)\n",
+    "c. a classified image using the trained model with each classifier (export as 'name_of_classifier.tif'). \n",
+    "```\n",
     "\n",
     "Note that the default parameters for each model are used in this test. You are highly suggested to explore more parameter combinitions. \n",
     "\n",
-    "More details on model fitting and paramters can be found in the sklearn library:\n",
+    "## More details on model fitting and paramters can be found in the sklearn library:\n",
     "\n",
+    "```python\n",
     "Random Forest:https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html\n",
     "Extra tress:https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.ExtraTreesClassifier.html\n",
     "Decision Tree:https://scikit-learn.org/stable/modules/tree.html\n",
     "SVM: https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html\n",
-    "Neural network: https://scikit-learn.org/stable/modules/neural_networks_supervised.html"
+    "Neural network: https://scikit-learn.org/stable/modules/neural_networks_supervised.html\n",
+    "```"
    ]
   },
   {
@@ -29,6 +37,7 @@
     "\n",
     "Set the variables in the first cell to the following:\n",
     "\n",
+    "python '''\n",
     "pyeo_path = \"The folder that you cloned pyeo into\"\n",
     "training_tif = \"The path to the stacked image you used for your training data\"\n",
     "training_shp = \"The path to the shapefile you made that contains a field with whole number (intergers) class identifiers\"\n",
@@ -36,6 +45,7 @@
     "out_dir = \"A directory that the model and related files will be put in\"\n",
     "validation_shp = \"The shapefile containing the valiation data.\"\n",
     "validation_field_name = \"The name of the field in validation_shp containing class identifers. CODE by default.\"\n",
+    "'''\n",
     "\n",
     "Now run each cell.\n"
    ]
@@ -250,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
